Fixed menu alignment issues

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -247,6 +247,9 @@ a[href^='tel'] {
     flex-grow: 2;
     z-index: 5;
   }
+  .mainnav-home-logo {
+    display: block;
+  }
   a:not(.topmenu-home) {
     margin-left: .75rem;
   }
@@ -306,8 +309,9 @@ a[href^='tel'] {
     }
   }
   .mainnav .hamburger {
-    font-size: 1.33rem;
-    margin-top: -2.5rem;
+    font-size: 1.4rem;
+    margin-top: -2.1rem;
+    padding-bottom: 0;
     text-align: right;
   }
 }
